apps/dev/chat-service/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: chat-service
  name: chat-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: chat-service
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: chat-service
    spec:
      containers:
        - env:
            - name: ASPNETCORE_ENVIRONMENT
              value: Production
            - name: MongoDb__ConnectionString
              value: mongodb://mongo-db:27017
            - name: MongoDb__Database
              value: ChatApp
          image: chat-service
          name: chat-service
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
