apps/dev/chat-service/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: chat-service
  name: chat-service
spec:
  ports:
    - name: "5002"
      port: 5002
      targetPort: 8080
  selector:
    io.kompose.service: chat-service
